# screen-painter

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  cc-with-test.mk
include/: sc_acsii_font.h  sc_common.h  sc_painter.h  sc_point_iterator.h
src/: sc_acsii_font.c  sc_common.c  sc_painter.c  sc_point_iterator.c
